# Online_Store

./: .gitignore  Makefile  pyproject.toml
products/: models.py  urls.py  views.py
products/fixtures/: categories.json  goods.json
products/migrations/: 0001_initial.py  0002_alter_product_price.py  0003_alter_product_price.py
products/templates/products/: base.html  index.html  products.html
store/: .urls.py.swp  settings.py  urls.py
users/: forms.py  models.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  profile.html
